--- a/frontend/src/app/ui-kit/preview/ui-kit-preview.component.html
+++ b/frontend/src/app/ui-kit/preview/ui-kit-preview.component.html
@@ -327,6 +327,20 @@ button.btn--accent2
 
 
 
+<h1>Info Table</h1>
+
+<table class="info-table">
+  <tr><td class="label-cell">Scenarios</td><td class="value-cell"> Wanstrow, Hembridge</td></tr>
+  <tr><td class="label-cell">Viewports</td><td class="value-cell">
+    <span>Evercreech</span>
+    <span>Shepton Mallet</span>
+    <span>Brewham</span>
+  </td></tr>
+  <tr><td class="label-cell">Run by</td>   <td class="value-cell"> Westcombe</td></tr>
+</table>
+
+
+
 <h1>Table Cells</h1>
 
 <table>
@@ -402,7 +416,6 @@ button.btn--accent2
   </tr>
 
 </table>
-
 
 <h1>Widgets</h1>
 
