Refactoring - Job Page markup and data binding

--- a/frontend/src/app/ui-kit/preview/ui-kit-preview.component.html
+++ b/frontend/src/app/ui-kit/preview/ui-kit-preview.component.html
@@ -284,8 +284,9 @@ button.btn--accent2
 <div class="separate-blocks"></div>
 
 <div class="card-lg">
-  <div class="image">
-    <img src="https://images.unsplash.com/photo-1587491717198-815e18b0364c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="">
+  <div class="image mouse--over">
+    <img class="main-image" src="https://images.unsplash.com/photo-1587491717198-815e18b0364c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="">
+    <img class="hover-image" src="https://images.unsplash.com/photo-1587033411391-5d9e51cce126?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1267&q=80" alt="">
     <div class="tags">
       <span class="tag tag--active">tag1</span>
       <span class="tag">tag2</span>
