Frontend: bind run all scenarios action

--- a/frontend/src/app/view/overview/overview.component.html
+++ b/frontend/src/app/view/overview/overview.component.html
@@ -1,4 +1,6 @@
-<app-overview-layout>
+<app-overview-layout
+  (clickRunAll)="runAllScenariosHandler()"
+>
 
   <div class="widgets-left-placeholder">
 
