approving test cases

--- a/frontend/src/app/view/job-page/job-page.component.html
+++ b/frontend/src/app/view/job-page/job-page.component.html
@@ -115,7 +115,7 @@
         [switchOnMouseOver]="true"
         (clickCard)="clickCardHandler(idx)"
         (clickLabel)="clickLabelHandler(c.scenarioId)"
-        (clickApprove)="clickApproveHandler(c.scenarioId)"
+        (clickApprove)="clickApproveHandler(c)"
       >
       </app-card-lg>
 
