--- a/frontend/src/app/ui-kit/info-table/info-table.component.html
+++ b/frontend/src/app/ui-kit/info-table/info-table.component.html
@@ -4,9 +4,7 @@
     <td class="label-cell">{{ lp.label }}</td>
     <td *ngIf="!lp.chips" class="value-cell">{{ items[ lp.prop ] }}</td>
     <td *ngIf="lp.chips" class="value-cell">
-        <span *ngFor="let v of items[ lp.prop ]">
-          {{ v }}
-        </span>
+        <div class="chips" *ngFor="let v of items[ lp.prop ]">{{ v }}</div>
     </td>
   </tr>
 
