UI Kit: viewport-selector wrap fix

--- a/frontend/src/app/ui-kit/viewports-selector/viewports-selector.component.html
+++ b/frontend/src/app/ui-kit/viewports-selector/viewports-selector.component.html
@@ -1,10 +1,10 @@
 <div class="viewports-selector">
-  <span
+  <div
     *ngFor="let v of _viewports"
     class="viewport-toggle"
     (click)="viewportClickHandler(v)"
     [ngClass]="{
       'viewport-toggle--on': v.checked
     }"
-  >{{ v.label }}</span>
+  >{{ v.label }}</div>
 </div>
